Closed Bug 105166 Opened 24 years ago Closed 24 years ago

premature page break printing nytimes.com

Categories

(Core :: Layout, defect, P2)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla0.9.6

People

(Reporter: karnaze, Assigned: karnaze)

References

()

Details

(Keywords: testcase, Whiteboard: PATCH CANDIDATE_094)

Attachments

(6 files)

This is a spinoff of bug 66804 which was fixed but got reopened because new urls kept getting added to it.
Keywords: nsbeta1
this also happens for http://www.businessweek.com
*** Bug 105206 has been marked as a duplicate of this bug. ***
just wanted to explain here what the symptoms for this bug are since we're starting to get DUPS. banner or top graphic is being printed on first page. and rest of the content is being printed on sucessive pages..
In the attachment, the cell block containing the tall spacer gif (I increased the height to 1500 from 900 in the url) does not split. As a result, the table does not split, so the body puts the table on the next page to give it more space to truncate. One approach would be to split images when they exceed a certain percentage of the page height. Kevin, I'm not sure who should get this.
Assignee: karnaze → kmcclusk
Keywords: testcase
taking this back to investigate splitting images.
Assignee: kmcclusk → karnaze
Whiteboard: PATCH
Target Milestone: --- → mozilla0.9.6
Comment on attachment 54323 [details] [diff] [review] patch to split images r= alexsavulov
Comment on attachment 54323 [details] [diff] [review] patch to split images sr=attinasi - way cool Chris!
Attachment #54323 - Flags: superreview+
Comment on attachment 54323 [details] [diff] [review] patch to split images r=alexsavulov
Attachment #54323 - Flags: review+
Attached patch revised patchSplinter Review
Attachment #55971 - Flags: superreview+
Comment on attachment 55971 [details] [diff] [review] revised patch r= alexsavulov
Attachment #55971 - Flags: review+
The patch is in.
Status: NEW → RESOLVED
Closed: 24 years ago
Priority: -- → P2
Resolution: --- → FIXED
Whiteboard: PATCH → PATCH CANDIDATE_094
verified in 11/2 trunk build on windows verified the following URLs print banner AND content together in continuous sequence on the same page: http://www.businessweek.com http://www.nytimes.com http://www.washingtonpost.com
Status: RESOLVED → VERIFIED
Comment on attachment 56840 [details] [diff] [review] I guess I lied, this needs to be applied after the 5th attachment sr=attinasi
Attachment #56840 - Flags: superreview+
removing item for this fixed bug from mozilla 0.9.6 release notes.
Is fix applied to trunk yet - I'm confused by the latest comments. I'm running 2001110803 and problem still exists. Apologies if fix not applied yet.
this should be fixed in trunk builds....if not let me know... I will recheck
just verified on 11/9 trunk build. I printed http://www.businessweek.com and it printed out the banner and content together. Thus this is fixed still. here are other test URLs: http://www.nytimes.com http://www.washingtonpost.com
Downloaded trunk 2001111303 and tested with html scipt as posted on bug 80966 (my original post for this bug). The script is taken from a cisco web page. It does not print the table correctly. It should print the table following the text as does ie and netscape 4.76 and not start a new page. Also on the new page it prints the table header then leaves a gap which is done on the following page as well. This bug is not fixed in this build.
Steve, are you sure what you are describing is the same as this bug ? Why don't we take this discussion over to bug 80966
sujay, have you run the test as described? Bug 80966 was eventually transferred to this bug! It does prematurely print a page break! Isn't that what this bug is about? It's to do with determining how to print a table that is longer than the page length. And it's not fixed.
nytimes.com fluctuates between being fixed and not. Right now with an 11/13 debug build it prints ok for me. A few days ago that was not the case. This could be happening because the content on that pages changes often. But until someone can attach a case that fails, please leave this bug closed.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: